src/objects/CommonApp_DataMapping__c.object
<CustomObject>
    <label>CommonApp DataMapping</label>
    <nameField>
        <label>CommonApp DataMapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CommonApp DataMappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Final_Field__c</fullName>
        <inlineHelpText>The final field destination this Common App field should be mapped to</inlineHelpText>
        <label>Final Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Object__c</fullName>
        <inlineHelpText>Select the object which this CA field should be stored in</inlineHelpText>
        <label>Final Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Application__c</fullName>
                </value>
                <value>
                    <fullName>Address__c</fullName>
                </value>
                <value>
                    <fullName>Education_History__c</fullName>
                </value>
                <value>
                    <fullName>Contact_Language__c</fullName>
                </value>
                <value>
                    <fullName>Relationship__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mapped_to__c</fullName>
        <inlineHelpText>Select the type of field this Common App field should be mapped to</inlineHelpText>
        <label>Mapped to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JSON</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Either</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repeat_Action__c</fullName>
        <inlineHelpText>For CA fields that are repeated which is denoted with [X] determine if we create new record or append.</inlineHelpText>
        <label>Repeat Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Append</fullName>
                </value>
                <value>
                    <fullName>New Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Structure__c</fullName>
        <inlineHelpText>Structure name for this Common App field</inlineHelpText>
        <label>Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>